# learn2slither

./: .gitignore  Learnings.md  Makefile  README.md  pyproject.toml
models/: dqn_1000.json  dqn_69000.json  dqn_7000.json  q_table_2001.json  q_table_70000.json
scripts/: smoke_test.sh
src/learn2slither/: agent.py  board.py  cli.py  main.py  models.py
src/learn2slither/agents/: __init__.py  actions.py  dqn.py  features.py  model_format.py  plots.py  q_learning.py  rewards.py  training.py
src/learn2slither/commands/: app.py  handlers.py  options.py  stats.py
src/learn2slither/core/: __init__.py  factory.py  state.py  types.py
src/learn2slither/pygame_ui/: app.py  constants.py  models.py  widgets.py
src/learn2slither/runtime/: headless.py  terminal.py
src/models/: dqn_2001.json  dqn_2002.json  q_table_10000.json  q_table_25000.json
src/models/experiments/: leaderboard.csv  nn_full_2100.json  nn_full_wall_body_2100.json  nn_green_danger_15.json  nn_green_danger_2100.json  nn_green_wall_body_2100.json  q_full_2100.json  q_full_wall_body_2100.json  q_green_danger_10.json  q_green_danger_2100.json  q_green_wall_body_2100.json
