[project]
name = "learn2slither"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlp-core",
    "pygame-ce>=2.5.7",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
mlp-core = { git = "https://github.com/maujogue/mlp-core.git" }

[project.scripts]
l2s = "learn2slither.main:main"
